// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`load instruction compiler > loads from a safe memory address 1`] = `
{
  "byteCode": [
    40,
    2,
    0,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": false,
    },
  ],
}
`;

exports[`load instruction compiler > loads from an unsafe memory address with a bounds guard 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    63,
    0,
    65,
    1,
    107,
    65,
    16,
    116,
    65,
    255,
    255,
    3,
    106,
    77,
    4,
    127,
    32,
    0,
    45,
    0,
    0,
    5,
    65,
    0,
    11,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": false,
    },
  ],
}
`;
